// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountSelector it renders the loading screen first 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  justify-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 16px;
}

.c2 {
  display: inline-block;
  height: 48px;
  width: 48px;
  background-color: #5E26FF;
}

.c3 {
  display: inline-block;
  height: 24px;
  width: 24px;
  background-color: rgb(26,0,102);
  -webkit-animation-name: bvGDKI;
  animation-name: bvGDKI;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    display="flex"
    height="100vh"
  >
    <span
      class="c2"
    >
      <span
        class="c3"
      />
    </span>
    <h4
      class="c4"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Loading...
    </h4>
  </div>
</div>
`;

exports[`AccountSelector it renders the wallets in redux with the msig copy when the msig prop is passed 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  justify-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  padding: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 1200px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: #d9e0f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
  max-width: 800px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  border-color: #5E26FF;
  background-color: #5E26FF;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 16px;
}

.c12 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  min-width: 0;
  box-sizing: border-box;
  margin: 8px;
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: #5E26FF;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c17 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c21 {
  min-width: 0;
  box-sizing: border-box;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c30 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c31 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c33 {
  min-width: 0;
  box-sizing: border-box;
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  margin: 8px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c37 {
  min-width: 0;
  box-sizing: border-box;
}

.c38 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 300px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c42 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 300px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c45 {
  min-width: 0;
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c23 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-width: 1px;
  border-radius: 4px;
}

.c23:hover {
  opacity: 0.8;
}

.c34 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c34:hover {
  opacity: 0.8;
}

.c6 {
  color: #5E26FF;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-left: 8px;
}

.c18 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c36 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.c29 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 0;
  margin-bottom: 0;
}

.c39 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  width: 50%;
  margin: 0;
}

.c25 {
  width: 24;
  height: 24;
}

.c24 {
  height: auto;
  opacity: 1 !important;
  border: 0;
  background: transparent;
  padding: 0;
  outline: none;
}

.c27 {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c22:hover .c26 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c20 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #E0D7FE;
  font-size: 1.5rem;
}

.c20:hover {
  border-bottom: 2px solid #5E26FF;
}

.c32 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.5rem;
}

.c32:hover {
  border-bottom: 2px solid #5E26FF;
}

.c43 {
  background: #E4EBFC;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  outline: none;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border: 0;
  font-size: 1rem;
  font-weight: 400;
  font-family: RT-Alias-Grotesk;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c43:hover {
  -webkit-transform: translateY(-4px);
  -ms-transform: translateY(-4px);
  transform: translateY(-4px);
  cursor: pointer;
  background: props.theme.colors.input.background.valid;
}

.c44 {
  background: #1AD08F;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  outline: none;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border: 0;
  font-size: 1rem;
  font-weight: 400;
  font-family: RT-Alias-Grotesk;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c44:hover {
  -webkit-transform: translateY(-4px);
  -ms-transform: translateY(-4px);
  transform: translateY(-4px);
  cursor: pointer;
  background: props.theme.colors.input.background.valid;
}

.c11 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c8 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c9 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 8px;
}

.c40 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #d1ddfa;
  width: 50%;
  display: inline-block;
  height: 48px;
  border-radius: 4px;
  border: 0;
  border-color: #999999;
}

.c40:hover {
  background: #bacbf7;
  cursor: text;
}

.c40:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c41 {
  -moz-appearance: textfield;
}

.c41::-webkit-outer-spin-button,
.c41::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c10 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.125rem;
  margin-left: 8px;
}

.c10:hover {
  border-bottom: 2px solid #5E26FF;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    display="flex"
  >
    <div
      class="c2"
      display="flex"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          color="core.white"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Ac
          </h3>
        </div>
        <h2
          class="c6"
          color="core.primary"
          font-family="RT-Alias-Grotesk"
          font-size="4"
          font-weight="400"
        >
          Select Account
        </h2>
      </div>
      <div
        class="c7"
      >
        <p
          class="c8"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Please select a Ledger account.
        </p>
        <p
          class="c9"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Don't see an account you're looking for? 
          <a
            class="c10"
            color="core.primary"
            font-size="2"
            href="https://reading.supply/@glif/not-seeing-the-right-address-when-accessing-the-glif-wallet-NE1FhV"
            rel="noopener noreferrer"
            target="blank"
          >
            Learn More
          </a>
        </p>
      </div>
    </div>
    <ul
      class="c11"
    >
      <div
        class="c12"
        display="flex"
      >
        <li
          class=""
        >
          <div
            class="c13"
            display="inline-block"
          >
            <div
              class="c14"
              color="card.account.color"
              display="flex"
              height="11"
              overflow="hidden"
              width="11"
            >
              <div
                class="c15"
                display="flex"
              >
                <div
                  class="c16"
                  color="card.account.color"
                  display="flex"
                  size="6"
                >
                  <h3
                    class="c5"
                  >
                    0
                  </h3>
                </div>
                <div
                  class="c17"
                  display="flex"
                >
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Default
                  </h2>
                </div>
              </div>
              <div
                class="c19"
                display="flex"
              >
                <a
                  class="c20"
                  color="card.account.color"
                  font-size="4"
                  href="https://filfox.info/en/address/t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                  target="_blank"
                >
                  t1z22 ... 6z6wgi
                </a>
                <div
                  class="c21"
                  color="card.account.color"
                  display="flex"
                >
                  <button
                    class="c22 c23 c24"
                    display="flex"
                    font-size="3"
                    height="6"
                    role="button"
                    type="button"
                  >
                    <svg
                      class="c25 c26 c27"
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="#1A0066"
                        height="12"
                        width="12"
                        x="8"
                        y="4"
                      />
                      <rect
                        fill="#E0D7FE"
                        height="12"
                        width="12"
                        x="4"
                        y="8"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="c28"
                display="flex"
              >
                <div
                  class="c17"
                  display="flex"
                >
                  <p
                    class="c29"
                    font-family="RT-Alias-Grotesk"
                    font-size="3"
                    font-weight="400"
                  >
                    Balance
                  </p>
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    1
                     FIL
                  </h2>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="c13"
            display="inline-block"
          >
            <div
              class="c30"
              color="colors.core.black"
              display="flex"
              height="11"
              overflow="hidden"
              width="11"
            >
              <div
                class="c15"
                display="flex"
              >
                <div
                  class="c31"
                  color="colors.core.black"
                  display="flex"
                  size="6"
                >
                  <h3
                    class="c5"
                  >
                    1
                  </h3>
                </div>
                <div
                  class="c17"
                  display="flex"
                >
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Account 
                    1
                  </h2>
                </div>
              </div>
              <div
                class="c19"
                display="flex"
              >
                <a
                  class="c32"
                  color="core.primary"
                  font-size="4"
                  href="https://filfox.info/en/address/t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb1uq"
                  target="_blank"
                >
                  t1mbk ... icb1uq
                </a>
                <div
                  class="c33"
                  color="core.primary"
                  display="flex"
                >
                  <button
                    class="c22 c23 c24"
                    display="flex"
                    font-size="3"
                    height="6"
                    role="button"
                    type="button"
                  >
                    <svg
                      class="c25 c26 c27"
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="#1A0066"
                        height="12"
                        width="12"
                        x="8"
                        y="4"
                      />
                      <rect
                        fill="#E0D7FE"
                        height="12"
                        width="12"
                        x="4"
                        y="8"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="c28"
                display="flex"
              >
                <div
                  class="c17"
                  display="flex"
                >
                  <p
                    class="c29"
                    font-family="RT-Alias-Grotesk"
                    font-size="3"
                    font-weight="400"
                  >
                    Balance
                  </p>
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    1
                     FIL
                  </h2>
                </div>
                <button
                  class="c34"
                  font-size="3"
                  height="6"
                  type="button"
                >
                  Select
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="c13"
            display="inline-block"
          >
            <div
              class="c30"
              color="colors.core.black"
              display="flex"
              height="11"
              overflow="hidden"
              width="11"
            >
              <div
                class="c15"
                display="flex"
              >
                <div
                  class="c31"
                  color="colors.core.black"
                  display="flex"
                  size="6"
                >
                  <h3
                    class="c5"
                  >
                    2
                  </h3>
                </div>
                <div
                  class="c17"
                  display="flex"
                >
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Account 
                    2
                  </h2>
                </div>
              </div>
              <div
                class="c19"
                display="flex"
              >
                <a
                  class="c32"
                  color="core.primary"
                  font-size="4"
                  href="https://filfox.info/en/address/t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb2uq"
                  target="_blank"
                >
                  t1mbk ... icb2uq
                </a>
                <div
                  class="c33"
                  color="core.primary"
                  display="flex"
                >
                  <button
                    class="c22 c23 c24"
                    display="flex"
                    font-size="3"
                    height="6"
                    role="button"
                    type="button"
                  >
                    <svg
                      class="c25 c26 c27"
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="#1A0066"
                        height="12"
                        width="12"
                        x="8"
                        y="4"
                      />
                      <rect
                        fill="#E0D7FE"
                        height="12"
                        width="12"
                        x="4"
                        y="8"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="c28"
                display="flex"
              >
                <div
                  class="c17"
                  display="flex"
                >
                  <p
                    class="c29"
                    font-family="RT-Alias-Grotesk"
                    font-size="3"
                    font-weight="400"
                  >
                    Balance
                  </p>
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    1
                     FIL
                  </h2>
                </div>
                <button
                  class="c34"
                  font-size="3"
                  height="6"
                  type="button"
                >
                  Select
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="c13"
            display="inline-block"
          >
            <div
              class="c30"
              color="colors.core.black"
              display="flex"
              height="11"
              overflow="hidden"
              width="11"
            >
              <div
                class="c15"
                display="flex"
              >
                <div
                  class="c31"
                  color="colors.core.black"
                  display="flex"
                  size="6"
                >
                  <h3
                    class="c5"
                  >
                    3
                  </h3>
                </div>
                <div
                  class="c17"
                  display="flex"
                >
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Account 
                    3
                  </h2>
                </div>
              </div>
              <div
                class="c19"
                display="flex"
              >
                <a
                  class="c32"
                  color="core.primary"
                  font-size="4"
                  href="https://filfox.info/en/address/t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb3uq"
                  target="_blank"
                >
                  t1mbk ... icb3uq
                </a>
                <div
                  class="c33"
                  color="core.primary"
                  display="flex"
                >
                  <button
                    class="c22 c23 c24"
                    display="flex"
                    font-size="3"
                    height="6"
                    role="button"
                    type="button"
                  >
                    <svg
                      class="c25 c26 c27"
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="#1A0066"
                        height="12"
                        width="12"
                        x="8"
                        y="4"
                      />
                      <rect
                        fill="#E0D7FE"
                        height="12"
                        width="12"
                        x="4"
                        y="8"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="c28"
                display="flex"
              >
                <div
                  class="c17"
                  display="flex"
                >
                  <p
                    class="c29"
                    font-family="RT-Alias-Grotesk"
                    font-size="3"
                    font-weight="400"
                  >
                    Balance
                  </p>
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    1
                     FIL
                  </h2>
                </div>
                <button
                  class="c34"
                  font-size="3"
                  height="6"
                  type="button"
                >
                  Select
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="c13"
            display="inline-block"
          >
            <div
              class="c30"
              color="colors.core.black"
              display="flex"
              height="11"
              overflow="hidden"
              width="11"
            >
              <div
                class="c15"
                display="flex"
              >
                <div
                  class="c31"
                  color="colors.core.black"
                  display="flex"
                  size="6"
                >
                  <h3
                    class="c5"
                  >
                    4
                  </h3>
                </div>
                <div
                  class="c17"
                  display="flex"
                >
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Account 
                    4
                  </h2>
                </div>
              </div>
              <div
                class="c19"
                display="flex"
              >
                <a
                  class="c32"
                  color="core.primary"
                  font-size="4"
                  href="https://filfox.info/en/address/t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb4uq"
                  target="_blank"
                >
                  t1mbk ... icb4uq
                </a>
                <div
                  class="c33"
                  color="core.primary"
                  display="flex"
                >
                  <button
                    class="c22 c23 c24"
                    display="flex"
                    font-size="3"
                    height="6"
                    role="button"
                    type="button"
                  >
                    <svg
                      class="c25 c26 c27"
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="#1A0066"
                        height="12"
                        width="12"
                        x="8"
                        y="4"
                      />
                      <rect
                        fill="#E0D7FE"
                        height="12"
                        width="12"
                        x="4"
                        y="8"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="c28"
                display="flex"
              >
                <div
                  class="c17"
                  display="flex"
                >
                  <p
                    class="c29"
                    font-family="RT-Alias-Grotesk"
                    font-size="3"
                    font-weight="400"
                  >
                    Balance
                  </p>
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    1
                     FIL
                  </h2>
                </div>
                <button
                  class="c34"
                  font-size="3"
                  height="6"
                  type="button"
                >
                  Select
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="c35"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <h2
              class="c36"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              Create new account
            </h2>
            <div
              class="c37"
            >
              <div
                class="c38"
                display="flex"
              >
                <h4
                  class="c39"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                  width="50%"
                >
                  Account index
                </h4>
                <input
                  class="c40 c41"
                  display="inline-block"
                  height="6"
                  value="5"
                  width="50%"
                />
              </div>
              
            </div>
            <div
              class="c37"
            >
              <div
                class="c42"
                display="flex"
                width="100%"
              >
                <button
                  class="c43"
                  display="flex"
                  font-family="RT-Alias-Grotesk"
                  font-size="1"
                  font-weight="1"
                  height="6"
                  width="50%"
                >
                  Legacy address
                </button>
                <button
                  class="c44"
                  display="flex"
                  font-family="RT-Alias-Grotesk"
                  font-size="1"
                  font-weight="1"
                  height="6"
                  width="50%"
                >
                  Normal address
                </button>
              </div>
            </div>
            <div
              class="c45"
              display="flex"
              width="100%"
            >
              <button
                class="c34"
                font-size="3"
                height="6"
                type="button"
              >
                Create
              </button>
            </div>
          </div>
        </li>
      </div>
    </ul>
  </div>
</div>
`;

exports[`AccountSelector it renders the wallets in redux, and an option to create the next wallet 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  justify-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  padding: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 1200px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: #d9e0f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
  max-width: 800px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  border-color: #5E26FF;
  background-color: #5E26FF;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 16px;
}

.c12 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  min-width: 0;
  box-sizing: border-box;
  margin: 8px;
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: #5E26FF;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c17 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c21 {
  min-width: 0;
  box-sizing: border-box;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c30 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c31 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c33 {
  min-width: 0;
  box-sizing: border-box;
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  margin: 8px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c37 {
  min-width: 0;
  box-sizing: border-box;
}

.c38 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 300px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c42 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 300px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c45 {
  min-width: 0;
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c23 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-width: 1px;
  border-radius: 4px;
}

.c23:hover {
  opacity: 0.8;
}

.c34 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c34:hover {
  opacity: 0.8;
}

.c6 {
  color: #5E26FF;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-left: 8px;
}

.c18 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c36 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.c29 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 0;
  margin-bottom: 0;
}

.c39 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  width: 50%;
  margin: 0;
}

.c25 {
  width: 24;
  height: 24;
}

.c24 {
  height: auto;
  opacity: 1 !important;
  border: 0;
  background: transparent;
  padding: 0;
  outline: none;
}

.c27 {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c22:hover .c26 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c20 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #E0D7FE;
  font-size: 1.5rem;
}

.c20:hover {
  border-bottom: 2px solid #5E26FF;
}

.c32 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.5rem;
}

.c32:hover {
  border-bottom: 2px solid #5E26FF;
}

.c43 {
  background: #E4EBFC;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  outline: none;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border: 0;
  font-size: 1rem;
  font-weight: 400;
  font-family: RT-Alias-Grotesk;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c43:hover {
  -webkit-transform: translateY(-4px);
  -ms-transform: translateY(-4px);
  transform: translateY(-4px);
  cursor: pointer;
  background: props.theme.colors.input.background.valid;
}

.c44 {
  background: #1AD08F;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  outline: none;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border: 0;
  font-size: 1rem;
  font-weight: 400;
  font-family: RT-Alias-Grotesk;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c44:hover {
  -webkit-transform: translateY(-4px);
  -ms-transform: translateY(-4px);
  transform: translateY(-4px);
  cursor: pointer;
  background: props.theme.colors.input.background.valid;
}

.c11 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c8 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c9 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 8px;
}

.c40 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #d1ddfa;
  width: 50%;
  display: inline-block;
  height: 48px;
  border-radius: 4px;
  border: 0;
  border-color: #999999;
}

.c40:hover {
  background: #bacbf7;
  cursor: text;
}

.c40:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c41 {
  -moz-appearance: textfield;
}

.c41::-webkit-outer-spin-button,
.c41::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c10 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.125rem;
  margin-left: 8px;
}

.c10:hover {
  border-bottom: 2px solid #5E26FF;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    display="flex"
  >
    <div
      class="c2"
      display="flex"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          color="core.white"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Ac
          </h3>
        </div>
        <h2
          class="c6"
          color="core.primary"
          font-family="RT-Alias-Grotesk"
          font-size="4"
          font-weight="400"
        >
          Switch Accounts
        </h2>
      </div>
      <div
        class="c7"
      >
        <p
          class="c8"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Your single seed phrase creates hundreds of individual accounts. We're showing you the first 5.
        </p>
        <p
          class="c9"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Don't see an account you're looking for? 
          <a
            class="c10"
            color="core.primary"
            font-size="2"
            href="https://reading.supply/@glif/not-seeing-the-right-address-when-accessing-the-glif-wallet-NE1FhV"
            rel="noopener noreferrer"
            target="blank"
          >
            Learn More
          </a>
        </p>
      </div>
    </div>
    <ul
      class="c11"
    >
      <div
        class="c12"
        display="flex"
      >
        <li
          class=""
        >
          <div
            class="c13"
            display="inline-block"
          >
            <div
              class="c14"
              color="card.account.color"
              display="flex"
              height="11"
              overflow="hidden"
              width="11"
            >
              <div
                class="c15"
                display="flex"
              >
                <div
                  class="c16"
                  color="card.account.color"
                  display="flex"
                  size="6"
                >
                  <h3
                    class="c5"
                  >
                    0
                  </h3>
                </div>
                <div
                  class="c17"
                  display="flex"
                >
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Default
                  </h2>
                </div>
              </div>
              <div
                class="c19"
                display="flex"
              >
                <a
                  class="c20"
                  color="card.account.color"
                  font-size="4"
                  href="https://filfox.info/en/address/t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                  target="_blank"
                >
                  t1z22 ... 6z6wgi
                </a>
                <div
                  class="c21"
                  color="card.account.color"
                  display="flex"
                >
                  <button
                    class="c22 c23 c24"
                    display="flex"
                    font-size="3"
                    height="6"
                    role="button"
                    type="button"
                  >
                    <svg
                      class="c25 c26 c27"
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="#1A0066"
                        height="12"
                        width="12"
                        x="8"
                        y="4"
                      />
                      <rect
                        fill="#E0D7FE"
                        height="12"
                        width="12"
                        x="4"
                        y="8"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="c28"
                display="flex"
              >
                <div
                  class="c17"
                  display="flex"
                >
                  <p
                    class="c29"
                    font-family="RT-Alias-Grotesk"
                    font-size="3"
                    font-weight="400"
                  >
                    Balance
                  </p>
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    1
                     FIL
                  </h2>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="c13"
            display="inline-block"
          >
            <div
              class="c30"
              color="colors.core.black"
              display="flex"
              height="11"
              overflow="hidden"
              width="11"
            >
              <div
                class="c15"
                display="flex"
              >
                <div
                  class="c31"
                  color="colors.core.black"
                  display="flex"
                  size="6"
                >
                  <h3
                    class="c5"
                  >
                    1
                  </h3>
                </div>
                <div
                  class="c17"
                  display="flex"
                >
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Account 
                    1
                  </h2>
                </div>
              </div>
              <div
                class="c19"
                display="flex"
              >
                <a
                  class="c32"
                  color="core.primary"
                  font-size="4"
                  href="https://filfox.info/en/address/t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb1uq"
                  target="_blank"
                >
                  t1mbk ... icb1uq
                </a>
                <div
                  class="c33"
                  color="core.primary"
                  display="flex"
                >
                  <button
                    class="c22 c23 c24"
                    display="flex"
                    font-size="3"
                    height="6"
                    role="button"
                    type="button"
                  >
                    <svg
                      class="c25 c26 c27"
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="#1A0066"
                        height="12"
                        width="12"
                        x="8"
                        y="4"
                      />
                      <rect
                        fill="#E0D7FE"
                        height="12"
                        width="12"
                        x="4"
                        y="8"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="c28"
                display="flex"
              >
                <div
                  class="c17"
                  display="flex"
                >
                  <p
                    class="c29"
                    font-family="RT-Alias-Grotesk"
                    font-size="3"
                    font-weight="400"
                  >
                    Balance
                  </p>
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    1
                     FIL
                  </h2>
                </div>
                <button
                  class="c34"
                  font-size="3"
                  height="6"
                  type="button"
                >
                  Select
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="c13"
            display="inline-block"
          >
            <div
              class="c30"
              color="colors.core.black"
              display="flex"
              height="11"
              overflow="hidden"
              width="11"
            >
              <div
                class="c15"
                display="flex"
              >
                <div
                  class="c31"
                  color="colors.core.black"
                  display="flex"
                  size="6"
                >
                  <h3
                    class="c5"
                  >
                    2
                  </h3>
                </div>
                <div
                  class="c17"
                  display="flex"
                >
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Account 
                    2
                  </h2>
                </div>
              </div>
              <div
                class="c19"
                display="flex"
              >
                <a
                  class="c32"
                  color="core.primary"
                  font-size="4"
                  href="https://filfox.info/en/address/t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb2uq"
                  target="_blank"
                >
                  t1mbk ... icb2uq
                </a>
                <div
                  class="c33"
                  color="core.primary"
                  display="flex"
                >
                  <button
                    class="c22 c23 c24"
                    display="flex"
                    font-size="3"
                    height="6"
                    role="button"
                    type="button"
                  >
                    <svg
                      class="c25 c26 c27"
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="#1A0066"
                        height="12"
                        width="12"
                        x="8"
                        y="4"
                      />
                      <rect
                        fill="#E0D7FE"
                        height="12"
                        width="12"
                        x="4"
                        y="8"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="c28"
                display="flex"
              >
                <div
                  class="c17"
                  display="flex"
                >
                  <p
                    class="c29"
                    font-family="RT-Alias-Grotesk"
                    font-size="3"
                    font-weight="400"
                  >
                    Balance
                  </p>
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    1
                     FIL
                  </h2>
                </div>
                <button
                  class="c34"
                  font-size="3"
                  height="6"
                  type="button"
                >
                  Select
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="c13"
            display="inline-block"
          >
            <div
              class="c30"
              color="colors.core.black"
              display="flex"
              height="11"
              overflow="hidden"
              width="11"
            >
              <div
                class="c15"
                display="flex"
              >
                <div
                  class="c31"
                  color="colors.core.black"
                  display="flex"
                  size="6"
                >
                  <h3
                    class="c5"
                  >
                    3
                  </h3>
                </div>
                <div
                  class="c17"
                  display="flex"
                >
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Account 
                    3
                  </h2>
                </div>
              </div>
              <div
                class="c19"
                display="flex"
              >
                <a
                  class="c32"
                  color="core.primary"
                  font-size="4"
                  href="https://filfox.info/en/address/t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb3uq"
                  target="_blank"
                >
                  t1mbk ... icb3uq
                </a>
                <div
                  class="c33"
                  color="core.primary"
                  display="flex"
                >
                  <button
                    class="c22 c23 c24"
                    display="flex"
                    font-size="3"
                    height="6"
                    role="button"
                    type="button"
                  >
                    <svg
                      class="c25 c26 c27"
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="#1A0066"
                        height="12"
                        width="12"
                        x="8"
                        y="4"
                      />
                      <rect
                        fill="#E0D7FE"
                        height="12"
                        width="12"
                        x="4"
                        y="8"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="c28"
                display="flex"
              >
                <div
                  class="c17"
                  display="flex"
                >
                  <p
                    class="c29"
                    font-family="RT-Alias-Grotesk"
                    font-size="3"
                    font-weight="400"
                  >
                    Balance
                  </p>
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    1
                     FIL
                  </h2>
                </div>
                <button
                  class="c34"
                  font-size="3"
                  height="6"
                  type="button"
                >
                  Select
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="c13"
            display="inline-block"
          >
            <div
              class="c30"
              color="colors.core.black"
              display="flex"
              height="11"
              overflow="hidden"
              width="11"
            >
              <div
                class="c15"
                display="flex"
              >
                <div
                  class="c31"
                  color="colors.core.black"
                  display="flex"
                  size="6"
                >
                  <h3
                    class="c5"
                  >
                    4
                  </h3>
                </div>
                <div
                  class="c17"
                  display="flex"
                >
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Account 
                    4
                  </h2>
                </div>
              </div>
              <div
                class="c19"
                display="flex"
              >
                <a
                  class="c32"
                  color="core.primary"
                  font-size="4"
                  href="https://filfox.info/en/address/t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb4uq"
                  target="_blank"
                >
                  t1mbk ... icb4uq
                </a>
                <div
                  class="c33"
                  color="core.primary"
                  display="flex"
                >
                  <button
                    class="c22 c23 c24"
                    display="flex"
                    font-size="3"
                    height="6"
                    role="button"
                    type="button"
                  >
                    <svg
                      class="c25 c26 c27"
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="#1A0066"
                        height="12"
                        width="12"
                        x="8"
                        y="4"
                      />
                      <rect
                        fill="#E0D7FE"
                        height="12"
                        width="12"
                        x="4"
                        y="8"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="c28"
                display="flex"
              >
                <div
                  class="c17"
                  display="flex"
                >
                  <p
                    class="c29"
                    font-family="RT-Alias-Grotesk"
                    font-size="3"
                    font-weight="400"
                  >
                    Balance
                  </p>
                  <h2
                    class="c18"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    1
                     FIL
                  </h2>
                </div>
                <button
                  class="c34"
                  font-size="3"
                  height="6"
                  type="button"
                >
                  Select
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="c35"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <h2
              class="c36"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              Create new account
            </h2>
            <div
              class="c37"
            >
              <div
                class="c38"
                display="flex"
              >
                <h4
                  class="c39"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                  width="50%"
                >
                  Account index
                </h4>
                <input
                  class="c40 c41"
                  display="inline-block"
                  height="6"
                  value="5"
                  width="50%"
                />
              </div>
              
            </div>
            <div
              class="c37"
            >
              <div
                class="c42"
                display="flex"
                width="100%"
              >
                <button
                  class="c43"
                  display="flex"
                  font-family="RT-Alias-Grotesk"
                  font-size="1"
                  font-weight="1"
                  height="6"
                  width="50%"
                >
                  Legacy address
                </button>
                <button
                  class="c44"
                  display="flex"
                  font-family="RT-Alias-Grotesk"
                  font-size="1"
                  font-weight="1"
                  height="6"
                  width="50%"
                >
                  Normal address
                </button>
              </div>
            </div>
            <div
              class="c45"
              display="flex"
              width="100%"
            >
              <button
                class="c34"
                font-size="3"
                height="6"
                type="button"
              >
                Create
              </button>
            </div>
          </div>
        </li>
      </div>
    </ul>
  </div>
</div>
`;

exports[`HelperText it renders the msig helper text correctly 1`] = `
.c0 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

<p
  class="c0"
  font-family="RT-Alias-Grotesk"
  font-size="2"
  font-weight="400"
>
  Please select a Ledger account.
</p>
`;

exports[`HelperText it renders the non-msig, non-saft, ledger helper text correctly 1`] = `
.c0 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

<p
  class="c0"
  font-family="RT-Alias-Grotesk"
  font-size="2"
  font-weight="400"
>
  Your single Ledger device creates hundreds of individual accounts. We're showing you the first 5.
</p>
`;

exports[`HelperText it renders the non-msig, non-saft, non-ledger helper text correctly 1`] = `
.c0 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

<p
  class="c0"
  font-family="RT-Alias-Grotesk"
  font-size="2"
  font-weight="400"
>
  Your single seed phrase creates hundreds of individual accounts. We're showing you the first 5.
</p>
`;
